# bessel

./: .gitignore  .npmrc  CLAUDE.md  Caddyfile  DESIGN.md  Makefile  PLAN.md  README.md  docker-compose.prod.yml  journal-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  run.sh  skills-lock.json  tsconfig.json
.github/: dependabot.yml
services/api/: .env.example  Dockerfile  Dockerfile.worker  README.md  compose.yml  db.py  openapi.json  pyproject.toml  worker.sh
services/api/migrations/: env.py
services/api/migrations/versions/: 2026_02_11_2004-b73ef216f17a_migrate.py  2026_02_14_0001-add_transaction_fields.py  2026_02_14_0002-add_import_batches_and_raw_transactions.py  2026_02_14_0003-remove_users_and_auth.py  2026_02_14_0004-add_bank_profiles.py  2026_02_14_0005-add_transaction_description_category_type.py  2026_02_14_0006-add_categories_table.py  2026_03_07_0001-add_places_table.py  2026_03_07_0002-change_photo_url_to_text.py  2026_03_07_0003-add_status_visited_at_country.py  2026_03_08_0001-add_tags_to_places.py  2026_03_08_0002-create_tasks_table.py  2026_03_08_0003-create_journal_entries_table.py  2026_03_08_0004-add_skandiabanken_profile.py  2026_03_08_0005-hierarchical_categories.py  2026_03_08_0006-widen_dedup_hash.py  2026_03_08_0007-create_investments_tables.py  2026_03_21_1436-15f656f863dd_add_workout_tables.py  2026_04_06_1418-5f82a6231327_add_weather_cache_table.py  2026_04_06_1620-c4f80725fd68_add_weather_forecast_fields.py  2026_04_06_1654-06268fcd3991_replace_journal_with_frictionless_schema.py  2026_04_06_1712-49159e3e930f_add_rir_set_type_e1rm_to_workout_sets.py  2026_05_14_0105-4ccff691fe61_add_is_business_to_transactions.py  2026_06_15_2104-e49ad6188599_add_activity_events.py  2026_06_22_2121-cab51a1f5594_add_notifications.py  2026_06_22_2214-fbe9af52fb6c_add_tree_of_alpha_news.py  2026_06_22_2217-205f982ea4b0_add_recipes_table.py  2026_06_22_2259-7ee8bf1e4ee4_add_counters_tables.py  2026_06_23_1745-a14d65f0d3f1_backfill_task_positions.py  2026_06_25_1636-376c8a028e71_add_projects_table.py  2026_06_25_1917-ca60bd695ed2_add_users_table_and_user_id_to_domain_.py  2026_06_26_0001-b3e91c7d4a20_add_link_to_notifications.py  2026_06_26_0242-81b97aaf32fe_add_path_to_projects.py  2026_06_26_1429-065c54d9371e_add_ssh_host_to_projects.py  2026_07_05_0001-9f2ce41d78aa_scope_transaction_dedup_to_user.py  2026_07_05_2056-076fe4199632_add_recipe_type_to_recipes.py  2026_07_12_1907-1dea22e255cb_add_devices_and_project_device_configs.py  2026_07_13_2207-3ed794c4c4a6_add_healthkit_workouts_table.py  2026_07_14_0159-63b13bca046b_merge_devices_and_healthkit_workout_.py  (+3 more)
services/api/scripts/: exception_handlers.py  seed_db.py  seed_exercises.py
(+451 files in other folders)
