[project]
name = "api"
version = "1.0.0"
requires-python = "==3.12.*"

dependencies = [
  "apscheduler>=3.11.1",
  "boto3>=1.42.0",
  "fastapi>=0.122.0",
  "pydantic>=2.10.1",
  "taskipy>=1.14.1",
  "uvicorn>=0.38.0",
  "dramatiq[watch,worker]>=2.0.0",
  "redis>=7.1.0",
  "starlette>=0.50.0",
  "alembic>=1.17.2",
  "typer>=0.20.0",
  "httpx>=0.28.1",
  "psycopg>=3.3.1",
  "psycopg2-binary>=2.9.10",
  "bcrypt>=5.0.0",
  "tabulate>=0.9.0",
  "beautifulsoup4>=4.13.4",
  "makefun>=1.16.0",
  "sentry-sdk>=2.47.0",
  "structlog>=25.5.0",
  "asyncpg>=0.31.0",
  "botocore>=1.42.6",
  "email-validator>=2.3.0",
  "python-jose[cryptography]>=3.3.0",
  "sqlalchemy-utils>=0.42.1",
  "alembic-utils>=0.8.8",
  "pytest-xdist[psutil]>=3.8.0",
  "types-redis>=4.6.0.20241004",
  "aio-pika>=9.5.8",
  "openapi-python-client>=0.28.0",
  "ffmpeg-python>=0.2.0",
  "aiocsv>=1.3.2",
  "aiofiles>=24.1.0",
  "aiohttp>=3.11.0",
  "pydantic-settings>=2.12.0",
  "asgi-ratelimit>=0.10.0",
  "opentelemetry-instrumentation-httpx>=0.60b1",
  "python-multipart>=0.0.22",
  "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-cov",
  "pytest-mock>=3.15.1",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.13.0",
  "mypy>=1.18.1",
]

[tool.taskipy.tasks]
api = { cmd = "uvicorn src.api.app:app --reload --port 8100 --host 0.0.0.0" }
worker = { cmd = "./worker.sh start", help = "start worker" }
worker_stop = { cmd = "./worker.sh stop", help = "stop worker gracefully" }
worker_restart = { cmd = "./worker.sh restart", help = "restart worker" }
worker_status = { cmd = "./worker.sh status", help = "check worker status" }
worker_clean = { cmd = "./worker.sh clean", help = "force kill all workers" }
db_migrate = { cmd = "python db.py upgrade" }
db_new_migration = { cmd = "alembic revision --autogenerate -m 'migrate'" }
db_seed = { cmd = "python -m scripts.seed_db" }
test = { cmd = "BESSEL_ENV=testing python -m pytest . --cov=src --cov-report=term-missing --cov-report=html" }
lint = { cmd = "ruff format . && ruff check --fix .", help = "run linters with autofix" }
generate_client = { cmd = "openapi-python-client generate --url http://localhost:8000/openapi.json --output-path ../python_client --overwrite" }

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
common = { workspace = true }

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
